--- a/index.html
+++ b/index.html
@@ -17,8 +17,194 @@
     <title>JusticeLeague</title>
   </head>
   <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <header>
+      <div class="container header-container flex">
+        <a class="logo" href="./index.html">
+          <span class="logo-m">M</span>box
+          <nav class="header-navigation">
+        </a>
+              <ul class="nav-list flex list">
+              <li class="nav-list-item"><a class="nav-link link current" href="./index.html">Home</a></li>
+              <li class="nav-list-item"><a class="nav-link link" href="./index.html">TV Shows</a></li>
+              <li class="nav-list-item"><a class="nav-link link" href="./index.html">TV Movies</a> </li>
+              <li class="nav-list-item"><a class="nav-link link" href="./index.html">TV Series</a> </li>
+            </ul>
+          </nav>
+                        <div class="search-ring-log-in">
+                <svg class="icon-svg" width="207" height="30">
+                <use
+                  class="icon-use"
+                  xlink:href="./images/sprite.svg#icon-Group-8"
+                ></use>
+              </svg>
+              </div>
+              <button class="mobile-menu-button visually-hidden">                <use
+                  class="mobile-menu-use"
+                  xlink:href="./images/sprite.svg#icon-mobile-menu"
+                ></use></button>
+      </div>
+    </header>
+    <main>
+      <section class="hero-section ">
+        <div class="hero-div">
+          <h1 class="main-h1">Zack Snyder's Justice League</h1>
+        <ul class="hero-info flex list">
+        <li>2021</li>
+        <li class="element-with-border">18+</li>
+        <li>4h 2min</li>
+        <li class="stars">8.8     <svg class="icon-star" width="24" height="24">
+                <use
+                  class="icon-use"
+                  xlink:href="./images/sprite.svg#star"
+                ></use>
+              </svg></li> 
+        </ul>               
+  
+        <p class="hero-paragraph">Determined to ensure Superman's ultimate sacrifice was not in vain, Bruce Wayne aligns forces with Diana Prince with plans to recruit a team of metahumans to protect the world from an approaching threat of catastrophic proportions. </p>
+        <div class="hero-links-div">
+          <a class="hero-link-1 link" href="#"><svg class="icon-star" width="14" height="18">
+                <use
+                  class="icon-play"
+                  xlink:href="./images/sprite.svg#icon-play"
+                ></use>
+              </svg> Watch</a>
+        <a class="hero-link-2 link" href="#">More information</a>
+        </div>
+      </div>
+      </section>
+      <section class="main-section hero">
+        <div class="container trending">
+          <h2 class="visually-hidden">Trending</h2>
+          <a class="tv-shows-page-link link" href="#"><h3 class="all-h3">Trending TV Shows</h3></a>
+          <ul class="trending-tv-shows flex list">
+            <li class="trending-tv-shows-items"><a class="tv-show-link" href="#"><img src="./images/movies/1.jpg" alt="TV show poster" width="206" height="309"></a></li>
+            <li class="trending-tv-shows-items"><a class="tv-show-link" href="#"><img src="./images/movies/2.jpg" alt="TV show poster" width="206" height="309"></a></li>
+            <li class="trending-tv-shows-items"><a class="tv-show-link" href="#"><img src="./images/movies/3.jpg" alt="TV show poster" width="206" height="309"></a></li>
+            <li class="trending-tv-shows-items"><a class="tv-show-link" href="#"><img src="./images/movies/4.jpg" alt="TV show poster" width="206" height="309"></a></li>
+            <li class="trending-tv-shows-items"><a class="tv-show-link" href="#"><img src="./images/movies/5.jpg" alt="TV show poster" width="206" height="309"></a></li>
+            <li class="trending-tv-shows-items"><a class="tv-show-link" href="#"><img src="./images/movies/6.jpg" alt="TV show poster" ></a></li>
+          </ul>
+          <a class="movie-page-link link" href="#"><h3 class="all-h3">Trending Movies</h3></a>
+          <ul class="trending-movies flex list">
+            <li class="trending-movies-items"><a class="movie-link" href="#"><img src="./images/movies/8.jpg" alt="TV show poster" width="206" height="309"></a></li>
+            <li class="trending-movies-items"><a class="movie-link" href="#"><img src="./images/movies/9.jpg" alt="TV show poster" width="206" height="309"></a></li>
+            <li class="trending-movies-items"><a class="movie-link" href="#"><img src="./images/movies/10.jpg" alt="TV show poster" width="206" height="309"></a></li>
+            <li class="trending-movies-items"><a class="movie-link" href="#"><img src="./images/movies/11.jpg" alt="TV show poster" width="206" height="309"></a></li>
+            <li class="trending-movies-items"><a class="movie-link" href="#"><img src="./images/movies/12.jpg" alt="TV show poster" width="206" height="309"></a></li>
+            <li class="trending-movies-items"><a class="movie-link" href="#"><img src="./images/movies/13.jpg" alt="TV show poster" width="206" height="309"></a></li>
+          </ul>
+          <a class="tranding-button" href="#">See more</a>
+        </div>
+      </section>
+      <section class="main-section">
+        <div class="container popular-genres">
+          <h2 class="visually-hidden">Popular ganers</h2>
+          <a class="ganers-page-link link" href="#"><h3 class="all-h3"> Popular Genres </h3></a>
+          <ul class="popular-ganers-list flex list">
+            <li class="popular-ganers-list-items gener-item-one"><a class="ganers-link" href="#"><use
+                  class="icon-ganers"
+                  xlink:href="./images/sprite.svg#icon-play"
+                ></use>
+              </svg>Romance</a></li>
+            <li class="popular-ganers-list-items gener-item-one"><a class="ganers-link" href="#"><use
+                  class="icon-ganers"
+                  xlink:href="./images/sprite.svg#icon-hearts-1"
+                ></use>
+              </svg>Drama</a></li>
+            <li class="popular-ganers-list-items gener-item-one"><a class="ganers-link" href="#"><use
+                  class="icon-ganers"
+                  xlink:href="./images/sprite.svg#icon-smile-1"
+                ></use>
+              </svg>Historical</a></li>
+            <li class="popular-ganers-list-items gener-item-one"><a class="ganers-link" href="#"><use
+                  class="icon-ganers"
+                  xlink:href="./images/sprite.svg#icon-documentary-1"
+                ></use>
+              </svg>Action</a></li>
+            <li class="popular-ganers-list-items gener-item-one"><a class="ganers-link" href="#"><use
+                  class="icon-ganers"
+                  xlink:href="./images/sprite.svg#icon-killer-1"
+                ></use>
+              </svg>Sci-fi</a></li>
+            <li class="popular-ganers-list-items gener-item-one"><a class="ganers-link" href="#"><use
+                  class="icon-ganers"
+                  xlink:href="./images/sprite.svg#icon-rocket-1"
+                ></use>
+              </svg>Horror</a></li>
+            <li class="popular-ganers-list-items gener-item-one"><a class="ganers-link" href="#"><use
+                  class="icon-ganers"
+                  xlink:href="./images/sprite.svg#icon-ghost-1"
+                ></use>
+              </svg>Comedy</a></li>
+            <li class="popular-ganers-list-items gener-item-one"><a class="ganers-link" href="#"><use
+                  class="icon-ganers"
+                  xlink:href="./images/sprite.svg#icon-castle-1"
+                ></use>
+              </svg>Documentary </a></li>
+          </ul>
+        </div>
+      </section>
+      <section class="main-section">
+        <div class="container actors">
+          <h2 class="visually-hidden">actors</h2>
+          <a class="actors-page-link link" href="#">
+            <h3 class="all-h3">Popular Actors & Directors</h3>
+          </a>
+          <ul class="actors-list-items list flex">
+            <li class="actors-list-items"><a class="actor-link" href="#"><img src="./images/team/1.jpg" alt="TV show poster" width="189" height="189"></a></li>
+            <li class="actors-list-items"><a class="actor-link" href="#"><img src="./images/team/2.jpg" alt="TV show poster" width="189" height="189"></a></li>
+            <li class="actors-list-items"><a class="actor-link" href="#"><img src="./images/team/3.jpg" alt="TV show poster" width="189" height="189"></a></li>
+            <li class="actors-list-items"><a class="actor-link" href="#"><img src="./images/team/4.jpg" alt="TV show poster" width="189" height="189"></a></li>
+            <li class="actors-list-items"><a class="actor-link" href="#"><img class="actor-five" src="./images/team/5.jpg" alt="TV show poster" width="189" height="189"></a></li>
+            <li class="actors-list-items"><a class="actor-link" href="#"><img src="./images/team/6.jpg" alt="TV show poster" width="189" height="189"></a></li>
+          </ul>
+        </div>
+      </section>
+      <section class="main-section">
+        <div class="container coming-soon flex">
+          <h2 class="visually-hidden">Coming Soon</h2>
+          <a class="coming-soon-movie-link link" href="coming-soon-page"><img src="./images/movie-poster.jpg" alt="movie poster" width="675" height="336"></a>
+          <div class="coming-soon-div flex">
+            <a class="coming-soon-page-link link" href="#"><img src="./images/year.png" alt="2021 coming soon">
+            <p class="coming-soon-p">Coming Soon...</p>
+            </a>
+          </div>
+        </div>
+      </section>
+        <section class="main-section">
+          <div class="container register">
+            <div class="beuty-container-register">
+            <h2 class="visually-hidden">Register Now</h2>
+            <p class="register-paragraph">Are You New Here ?Don’t wait, Register Now. </p>
+             <button class="registration-button" type="button" aria-label="registration button">Register Now</button>
+            </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+      <div class="container footer-container flex">
+                <a class="logo logo-footer" href="./index.html">
+          <span class="logo-m">m</span>box
+        </a>
+        <ul class="info-list-part-one list">
+          <li class="info-list-part-one-items"><a class="footer-links link" href="./index.html">Voice over and Subtitle</a></li>
+          <li class="info-list-part-one-items"><a class="footer-links link" href="./index.html">Media Center</a> </li>
+          <li class="info-list-part-one-items"><a class="footer-links link" href="./index.html">Privacy</a> </li>
+          <li class="info-list-part-one-items"><a class="footer-links link" href="./index.html">Contact us</a> </li>
+        </ul>
+        <ul class="info-list-part-two flex list">
+          <li class="info-list-part-two-items"><a class="footer-links link" href="./index.html">Voce Description</a> </li>
+          <li class="info-list-part-two-items"><a class="footer-links link" href="./index.html">Investor Relations</a> </li>
+          <li class="info-list-part-two-items"><a class="footer-links link" href="./index.html">Legal Provisions</a> </li>
+          <li class="info-list-part-two-items"><a class="footer-links link" href="./index.html">Help Center</a></li>
+          <li class="info-list-part-two-items"><a class="footer-links link" href="./index.html">Job Opportunities</a> </li>
+          <li class="info-list-part-two-items"><a class="footer-links link" href="./index.html">Cocies Preferences</a> </li>
+          <li class="info-list-part-two-items"><a class="footer-links link" href="./index.html">Gift Cards</a> </li>
+          <li class="info-list-part-two-items"><a class="footer-links link" href="./index.html">Terms of Use</a> </li>
+          <li class="info-list-part-two-items"><a class="footer-links link" href="./index.html">Corporate informations</a></li>
+        </ul>
+
+      </div>
+    </footer>
   </body>
 </html>
