--- a/index.html
+++ b/index.html
@@ -72,98 +72,104 @@
         </div>
       </div>
       </section>
-      <section class="main-section hero">
+      <section class="main-section">
         <div class="container trending">
           <h2 class="visually-hidden">Trending</h2>
           <a class="tv-shows-page-link link" href="#"><h3 class="all-h3">Trending TV Shows</h3></a>
           <ul class="trending-tv-shows flex list">
-            <li class="trending-tv-shows-items"><a class="tv-show-link" href="#"><img src="./images/movies/1.jpg" alt="TV show poster" width="206" height="309"></a></li>
-            <li class="trending-tv-shows-items"><a class="tv-show-link" href="#"><img src="./images/movies/2.jpg" alt="TV show poster" width="206" height="309"></a></li>
-            <li class="trending-tv-shows-items"><a class="tv-show-link" href="#"><img src="./images/movies/3.jpg" alt="TV show poster" width="206" height="309"></a></li>
-            <li class="trending-tv-shows-items"><a class="tv-show-link" href="#"><img src="./images/movies/4.jpg" alt="TV show poster" width="206" height="309"></a></li>
-            <li class="trending-tv-shows-items"><a class="tv-show-link" href="#"><img src="./images/movies/5.jpg" alt="TV show poster" width="206" height="309"></a></li>
-            <li class="trending-tv-shows-items"><a class="tv-show-link" href="#"><img src="./images/movies/6.jpg" alt="TV show poster" ></a></li>
+            <li class="trending-tv-shows-items"><a class="tv-show-link" href="#"><img class="tvs-movies-imgs" src="./images/movies/1.jpg" alt="TV show poster" width="206" height="309"></a></li>
+            <li class="trending-tv-shows-items"><a class="tv-show-link" href="#"><img class="tvs-movies-imgs" src="./images/movies/2.jpg" alt="TV show poster" width="206" height="309"></a></li>
+            <li class="trending-tv-shows-items item-three"><a class="tv-show-link" href="#"><img class="tvs-movies-imgs" src="./images/movies/3.jpg" alt="TV show poster" width="206" height="309"></a></li>
+            <li class="trending-tv-shows-items item-four"><a class="tv-show-link" href="#"><img class="tvs-movies-imgs" src="./images/movies/4.jpg" alt="TV show poster" width="206" height="309"></a></li>
+            <li class="trending-tv-shows-items"><a class="tv-show-link" href="#"><img class="tvs-movies-imgs" src="./images/movies/5.jpg" alt="TV show poster" width="206" height="309"></a></li>
+            <li class="trending-tv-shows-items"><a class="tv-show-link" href="#"><img class="tvs-movies-imgs" src="./images/movies/6.jpg" alt="TV show poster" ></a></li>
           </ul>
           <a class="movie-page-link link" href="#"><h3 class="all-h3">Trending Movies</h3></a>
           <ul class="trending-movies flex list">
-            <li class="trending-movies-items"><a class="movie-link" href="#"><img src="./images/movies/8.jpg" alt="TV show poster" width="206" height="309"></a></li>
-            <li class="trending-movies-items"><a class="movie-link" href="#"><img src="./images/movies/9.jpg" alt="TV show poster" width="206" height="309"></a></li>
-            <li class="trending-movies-items"><a class="movie-link" href="#"><img src="./images/movies/10.jpg" alt="TV show poster" width="206" height="309"></a></li>
-            <li class="trending-movies-items"><a class="movie-link" href="#"><img src="./images/movies/11.jpg" alt="TV show poster" width="206" height="309"></a></li>
-            <li class="trending-movies-items"><a class="movie-link" href="#"><img src="./images/movies/12.jpg" alt="TV show poster" width="206" height="309"></a></li>
-            <li class="trending-movies-items"><a class="movie-link" href="#"><img src="./images/movies/13.jpg" alt="TV show poster" width="206" height="309"></a></li>
+            <li class="trending-movies-items"><a class="movie-link" href="#"><img class="tvs-movies-imgs" src="./images/movies/8.jpg" alt="TV show poster" width="206" height="309"></a></li>
+            <li class="trending-movies-items"><a class="movie-link" href="#"><img class="tvs-movies-imgs" src="./images/movies/9.jpg" alt="TV show poster" width="206" height="309"></a></li>
+            <li class="trending-movies-items item-three"><a class="movie-link" href="#"><img class="tvs-movies-imgs" src="./images/movies/10.jpg" alt="TV show poster" width="206" height="309"></a></li>
+            <li class="trending-movies-items item-four"><a class="movie-link" href="#"><img class="tvs-movies-imgs" src="./images/movies/11.jpg" alt="TV show poster" width="206" height="309"></a></li>
+            <li class="trending-movies-items"><a class="movie-link" href="#"><img class="tvs-movies-imgs" src="./images/movies/12.jpg" alt="TV show poster" width="206" height="309"></a></li>
+            <li class="trending-movies-items"><a class="movie-link" href="#"><img class="tvs-movies-imgs" src="./images/movies/13.jpg" alt="TV show poster" width="206" height="309"></a></li>
           </ul>
           <a class="tranding-button" href="#">See more</a>
         </div>
       </section>
-      <section class="main-section">
+      <section class="main-section geners-section">
         <div class="container popular-genres">
           <h2 class="visually-hidden">Popular ganers</h2>
           <a class="ganers-page-link link" href="#"><h3 class="all-h3"> Popular Genres </h3></a>
           <ul class="popular-ganers-list flex list">
-            <li class="popular-ganers-list-items gener-item-one"><a class="ganers-link" href="#"><use
-                  class="icon-ganers"
-                  xlink:href="./images/sprite.svg#icon-play"
-                ></use>
-              </svg>Romance</a></li>
-            <li class="popular-ganers-list-items gener-item-one"><a class="ganers-link" href="#"><use
+            <li class="popular-ganers-list-items gener-item-one"><a class="ganers-link" href="#"><svg width="80" height="80"><use
                   class="icon-ganers"
                   xlink:href="./images/sprite.svg#icon-hearts-1"
                 ></use>
-              </svg>Drama</a></li>
-            <li class="popular-ganers-list-items gener-item-one"><a class="ganers-link" href="#"><use
+              </svg>Romance</a></li>
+            <li class="popular-ganers-list-items gener-item-two"><a class="ganers-link" href="#"><svg width="80" height="80" ><use
                   class="icon-ganers"
-                  xlink:href="./images/sprite.svg#icon-smile-1"
+                  xlink:href="./images/sprite.svg#icon-cinema-1"
                 ></use>
-              </svg>Historical</a></li>
-            <li class="popular-ganers-list-items gener-item-one"><a class="ganers-link" href="#"><use
+              </svg>Drama</a></li>
+            <li class="popular-ganers-list-items gener-item-three"><a class="ganers-link" href="#"><svg width="80" height="80"><use
                   class="icon-ganers"
                   xlink:href="./images/sprite.svg#icon-documentary-1"
                 ></use>
-              </svg>Action</a></li>
-            <li class="popular-ganers-list-items gener-item-one"><a class="ganers-link" href="#"><use
+
+              </svg>Historical</a></li>
+            <li class="popular-ganers-list-items gener-item-four"><a class="ganers-link" href="#"><svg width="80" height="80"><use
                   class="icon-ganers"
                   xlink:href="./images/sprite.svg#icon-killer-1"
                 ></use>
-              </svg>Sci-fi</a></li>
-            <li class="popular-ganers-list-items gener-item-one"><a class="ganers-link" href="#"><use
+              </svg>Action</a></li>
+            <li class="popular-ganers-list-items gener-item-five"><a class="ganers-link" href="#"><svg width="100" height="100"><use
                   class="icon-ganers"
                   xlink:href="./images/sprite.svg#icon-rocket-1"
                 ></use>
-              </svg>Horror</a></li>
-            <li class="popular-ganers-list-items gener-item-one"><a class="ganers-link" href="#"><use
+              </svg>Sci-fi</a></li>
+            <li class="popular-ganers-list-items gener-item-six"><a class="ganers-link" href="#"> <svg width="80" height="80" ><use
                   class="icon-ganers"
                   xlink:href="./images/sprite.svg#icon-ghost-1"
                 ></use>
-              </svg>Comedy</a></li>
-            <li class="popular-ganers-list-items gener-item-one"><a class="ganers-link" href="#"><use
+              </svg>Horror</a></li>
+            <li class="popular-ganers-list-items gener-item-seven"><a class="ganers-link" href="#"> <svg width="80" height="80"> <use
+                  class="icon-ganers"
+                  xlink:href="./images/sprite.svg#icon-smile-1"
+                ></use>
+              </svg>
+              Comedy</a></li>
+            <li class="popular-ganers-list-items gener-item-eight">
+              <a class="ganers-link" href="#"><svg width="80" height="80">
+                <use
                   class="icon-ganers"
                   xlink:href="./images/sprite.svg#icon-castle-1"
                 ></use>
-              </svg>Documentary </a></li>
+              </svg>
+              Documentary </a>
+            </li>
           </ul>
         </div>
       </section>
-      <section class="main-section">
+      <section class="main-section actors-section">
         <div class="container actors">
           <h2 class="visually-hidden">actors</h2>
           <a class="actors-page-link link" href="#">
             <h3 class="all-h3">Popular Actors & Directors</h3>
           </a>
           <ul class="actors-list-items list flex">
-            <li class="actors-list-items"><a class="actor-link" href="#"><img src="./images/team/1.jpg" alt="TV show poster" width="189" height="189"></a></li>
-            <li class="actors-list-items"><a class="actor-link" href="#"><img src="./images/team/2.jpg" alt="TV show poster" width="189" height="189"></a></li>
-            <li class="actors-list-items"><a class="actor-link" href="#"><img src="./images/team/3.jpg" alt="TV show poster" width="189" height="189"></a></li>
-            <li class="actors-list-items"><a class="actor-link" href="#"><img src="./images/team/4.jpg" alt="TV show poster" width="189" height="189"></a></li>
-            <li class="actors-list-items"><a class="actor-link" href="#"><img class="actor-five" src="./images/team/5.jpg" alt="TV show poster" width="189" height="189"></a></li>
-            <li class="actors-list-items"><a class="actor-link" href="#"><img src="./images/team/6.jpg" alt="TV show poster" width="189" height="189"></a></li>
+            <li class="actors-list-items"><a class="actor-link" href="#"><img class="actor" src="./images/team/1.jpg" alt="TV show poster" width="189" height="189"></a></li>
+            <li class="actors-list-items"><a class="actor-link" href="#"><img class="actor" src="./images/team/2.jpg" alt="TV show poster" width="189" height="189"></a></li>
+            <li class="actors-list-items actor-three"><a class="actor-link" href="#"><img class="actor" src="./images/team/3.jpg" alt="TV show poster" width="189" height="189"></a></li>
+            <li class="actors-list-items"><a class="actor-link" href="#"><img class="actor" src="./images/team/4.jpg" alt="TV show poster" width="189" height="189"></a></li>
+            <li class="actors-list-items"><a class="actor-link" href="#"><img class="actor actor-five" src="./images/team/5.jpg" alt="TV show poster" width="189" height="189"></a></li>
+            <li class="actors-list-items"><a class="actor-link" href="#"><img class="actor" src="./images/team/6.jpg" alt="TV show poster" width="189" height="189"></a></li>
           </ul>
         </div>
       </section>
-      <section class="main-section">
+      <section class="main-section coming-soon-section">
         <div class="container coming-soon flex">
           <h2 class="visually-hidden">Coming Soon</h2>
-          <a class="coming-soon-movie-link link" href="coming-soon-page"><img src="./images/movie-poster.jpg" alt="movie poster" width="675" height="336"></a>
+          <a class="coming-soon-movie-link link" href="coming-soon-page"><img src="./images/movie-poster.jpg" alt="movie poster" width="337" height="168"></a>
           <div class="coming-soon-div flex">
             <a class="coming-soon-page-link link" href="#"><img src="./images/year.png" alt="2021 coming soon">
             <p class="coming-soon-p">Coming Soon...</p>
@@ -171,7 +177,7 @@
           </div>
         </div>
       </section>
-        <section class="main-section">
+        <section class="main-section register-section">
           <div class="container register">
             <div class="beuty-container-register">
             <h2 class="visually-hidden">Register Now</h2>
@@ -183,6 +189,7 @@
     </main>
     <footer>
       <div class="container footer-container flex">
+        <div class="logo-list-one flex">
                 <a class="logo logo-footer" href="./index.html">
           <span class="logo-m">m</span>box
         </a>
@@ -192,6 +199,7 @@
           <li class="info-list-part-one-items"><a class="footer-links link" href="./index.html">Privacy</a> </li>
           <li class="info-list-part-one-items"><a class="footer-links link" href="./index.html">Contact us</a> </li>
         </ul>
+        </div>
         <ul class="info-list-part-two flex list">
           <li class="info-list-part-two-items"><a class="footer-links link" href="./index.html">Voce Description</a> </li>
           <li class="info-list-part-two-items"><a class="footer-links link" href="./index.html">Investor Relations</a> </li>
