--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
                   class="mobile-menu-use"
                   xlink:href="./images/sprite.svg#icon-mobile-menu"
                 ></use></button>
+
+                <button class="mobile-menu-button" type="button" ><svg class="icon-star" width="47" height="32">
+                <use
+                  class="icon-play"
+                  xlink:href="./images/sprite.svg#icon-mobile-menu"
+                ></use>
+              </svg></button>
       </div>
     </header>
     <main>
