--- a/index.html
+++ b/index.html
@@ -164,12 +164,12 @@
             <h3 class="all-h3">Popular Actors & Directors</h3>
           </a>
           <ul class="actors-list-items list flex">
-            <li class="actors-list-items"><a class="actor-link" href="#"><img class="actor" src="./images/team/1.jpg" alt="TV show poster" width="189" height="189"></a></li>
-            <li class="actors-list-items"><a class="actor-link" href="#"><img class="actor" src="./images/team/2.jpg" alt="TV show poster" width="189" height="189"></a></li>
-            <li class="actors-list-items actor-three"><a class="actor-link" href="#"><img class="actor" src="./images/team/3.jpg" alt="TV show poster" width="189" height="189"></a></li>
-            <li class="actors-list-items"><a class="actor-link" href="#"><img class="actor" src="./images/team/4.jpg" alt="TV show poster" width="189" height="189"></a></li>
-            <li class="actors-list-items"><a class="actor-link" href="#"><img class="actor actor-five" src="./images/team/5.jpg" alt="TV show poster" width="189" height="189"></a></li>
-            <li class="actors-list-items"><a class="actor-link" href="#"><img class="actor" src="./images/team/6.jpg" alt="TV show poster" width="189" height="189"></a></li>
+            <li class="actors-list-items"><a class="actor-link" href="#"><img class="actor" src="./images/team/1.jpg" alt="TV show poster" width="189" height="189">Samantha Bowen</a></li>
+            <li class="actors-list-items"><a class="actor-link" href="#"><img class="actor" src="./images/team/2.jpg" alt="TV show poster" width="189" height="189">Rhys Birch</a></li>
+            <li class="actors-list-items actor-three"><a class="actor-link" href="#"><img class="actor" src="./images/team/3.jpg" alt="TV show poster" width="189" height="189">Holloway</a></li>
+            <li class="actors-list-items"><a class="actor-link" href="#"><img class="actor" src="./images/team/4.jpg" alt="TV show poster" width="189" height="189">Joshua Walton</a></li>
+            <li class="actors-list-items"><a class="actor-link" href="#"><img class="actor actor-five" src="./images/team/5.jpg" alt="TV show poster" width="189" height="189">Patrick Elliott</a></li>
+            <li class="actors-list-items"><a class="actor-link" href="#"><img class="actor" src="./images/team/6.jpg" alt="TV show poster" width="189" height="189">Morgan O'Neill</a></li>
           </ul>
         </div>
       </section>
