--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -24,10 +28,10 @@
           <nav class="header-navigation">
         </a>
               <ul class="nav-list flex list">
-              <li class="nav-list-item"><a class="nav-link link current" href="./index.html">Home</a></li>
-              <li class="nav-list-item"><a class="nav-link link" href="./index.html">TV Shows</a></li>
-              <li class="nav-list-item"><a class="nav-link link" href="./index.html">TV Movies</a> </li>
-              <li class="nav-list-item"><a class="nav-link link" href="./index.html">TV Series</a> </li>
+              <li class="nav-list-item"><a class="nav-link link current animate__animated animate__flash" href="./index.html">Home</a></li>
+              <li class="nav-list-item"><a class="nav-link link animate__animated animate__flash" href="./index.html">TV Shows</a></li>
+              <li class="nav-list-item"><a class="nav-link link animate__animated animate__flash" href="./index.html">TV Movies</a> </li>
+              <li class="nav-list-item"><a class="nav-link link animate__animated animate__flash" href="./index.html">TV Series</a> </li>
             </ul>
           </nav>
                         <div class="search-ring-log-in">
@@ -54,7 +58,7 @@
     <main>
       <section class="hero-section ">
         <div class="hero-div">
-          <h1 class="main-h1">Zack Snyder's Justice League</h1>
+          <h1 class="main-h1 bounce-in-top">Zack Snyder's Justice League</h1>
         <ul class="hero-info flex list">
         <li>2021</li>
         <li class="element-with-border">18+</li>
