--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
   <body>
     <header>
       <div class="container header-container flex">
-        <a class="logo" href="./index.html">
+        <a class="logo slide-in-blurred-left" href="./index.html">
           <span class="logo-m">M</span>box
           <nav class="header-navigation">
         </a>
               <ul class="nav-list flex list">
-              <li class="nav-list-item"><a class="nav-link link current animate__animated animate__flash" href="./index.html">Home</a></li>
-              <li class="nav-list-item"><a class="nav-link link animate__animated animate__flash" href="./index.html">TV Shows</a></li>
-              <li class="nav-list-item"><a class="nav-link link animate__animated animate__flash" href="./index.html">TV Movies</a> </li>
-              <li class="nav-list-item"><a class="nav-link link animate__animated animate__flash" href="./index.html">TV Series</a> </li>
+              <li class="nav-list-item slide-in-blurred-top"><a class="nav-link link current animate__animated " href="./index.html">Home</a></li>
+              <li class="nav-list-item slide-in-blurred-top"><a class="nav-link link animate__animated " href="./index.html">TV Shows</a></li>
+              <li class="nav-list-item slide-in-blurred-top"><a class="nav-link link animate__animated " href="./index.html">TV Movies</a> </li>
+              <li class="nav-list-item slide-in-blurred-top"><a class="nav-link link animate__animated " href="./index.html">TV Series</a> </li>
             </ul>
           </nav>
-                        <div class="search-ring-log-in">
+                        <div class="search-ring-log-in slide-in-blurred-right">
                 <svg class="icon-svg" width="207" height="30">
                 <use
                   class="icon-use"
@@ -58,8 +58,8 @@
     <main>
       <section class="hero-section ">
         <div class="hero-div">
-          <h1 class="main-h1 bounce-in-top">Zack Snyder's Justice League</h1>
-        <ul class="hero-info flex list">
+          <h1 class="main-h1 slide-in-blurred-top">Zack Snyder's Justice League</h1>
+        <ul class="hero-info flex list slide-in-blurred-left">
         <li>2021</li>
         <li class="element-with-border">18+</li>
         <li>4h 2min</li>
@@ -71,15 +71,15 @@
               </svg></li> 
         </ul>               
   
-        <p class="hero-paragraph">Determined to ensure Superman's ultimate sacrifice was not in vain, Bruce Wayne aligns forces with Diana Prince with plans to recruit a team of metahumans to protect the world from an approaching threat of catastrophic proportions. </p>
-        <div class="hero-links-div">
+        <p class="hero-paragraph slide-in-blurred-left">Determined to ensure Superman's ultimate sacrifice was not in vain, Bruce Wayne aligns forces with Diana Prince with plans to recruit a team of metahumans to protect the world from an approaching threat of catastrophic proportions. </p>
+        <div class="hero-links-div slide-in-blurred-left">
           <a class="hero-link-1 link" href="#"><svg class="icon-star" width="14" height="18">
                 <use
                   class="icon-play"
                   xlink:href="./images/sprite.svg#icon-play"
                 ></use>
               </svg> Watch</a>
-        <a class="hero-link-2 link" href="#">More information</a>
+        <a class="hero-link-2 link " href="#">More information</a>
         </div>
       </div>
       </section>
