--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         </a>
               <ul class="nav-list flex list">
               <li class="nav-list-item slide-in-blurred-top"><a class="nav-link link current animate__animated " href="./index.html">Home</a></li>
-              <li class="nav-list-item slide-in-blurred-top"><a class="nav-link link animate__animated " href="./index.html">TV Shows</a></li>
-              <li class="nav-list-item slide-in-blurred-top"><a class="nav-link link animate__animated " href="./index.html">TV Movies</a> </li>
+              <li class="nav-list-item slide-in-blurred-top"><a class="nav-link link animate__animated " href="#tranding-tv">TV Shows</a></li>
+              <li class="nav-list-item slide-in-blurred-top"><a class="nav-link link animate__animated " href="#tranding-movie">TV Movies</a> </li>
               <li class="nav-list-item slide-in-blurred-top"><a class="nav-link link animate__animated " href="./index.html">TV Series</a> </li>
             </ul>
           </nav>
@@ -86,7 +86,7 @@
       <section class="main-section">
         <div class="container trending">
           <h2 class="visually-hidden">Trending</h2>
-          <a class="tv-shows-page-link link" href="#"><h3 class="all-h3">Trending TV Shows</h3></a>
+          <a class="tv-shows-page-link link" href="#"><h3 class="all-h3" id="tranding-tv">Trending TV Shows</h3></a>
           <ul class="trending-tv-shows flex list">
             <li class="trending-tv-shows-items"><a class="tv-show-link" href="#"><img class="tvs-movies-imgs" src="./images/movies/1.jpg" alt="TV show poster" width="206" height="309"></a></li>
             <li class="trending-tv-shows-items"><a class="tv-show-link" href="#"><img class="tvs-movies-imgs" src="./images/movies/2.jpg" alt="TV show poster" width="206" height="309"></a></li>
@@ -95,7 +95,7 @@
             <li class="trending-tv-shows-items"><a class="tv-show-link" href="#"><img class="tvs-movies-imgs" src="./images/movies/5.jpg" alt="TV show poster" width="206" height="309"></a></li>
             <li class="trending-tv-shows-items"><a class="tv-show-link" href="#"><img class="tvs-movies-imgs" src="./images/movies/6.jpg" alt="TV show poster" ></a></li>
           </ul>
-          <a class="movie-page-link link" href="#"><h3 class="all-h3">Trending Movies</h3></a>
+          <a class="movie-page-link link" href="#"><h3 class="all-h3" id="tranding-movie">Trending Movies</h3></a>
           <ul class="trending-movies flex list">
             <li class="trending-movies-items"><a class="movie-link" href="#"><img class="tvs-movies-imgs" src="./images/movies/8.jpg" alt="TV show poster" width="206" height="309"></a></li>
             <li class="trending-movies-items"><a class="movie-link" href="#"><img class="tvs-movies-imgs" src="./images/movies/9.jpg" alt="TV show poster" width="206" height="309"></a></li>
